3.4.4
	+ Enhanced Lock to have exclusive lock with blocking timeout
	+ Added redirection on no parameters support to CGIs
	+ Added and used in save changes process the method Zentyal.reloadTable
	+ Fixed regression in page not found CGI which displayed always a
	  invalid referer error
	+ Included the package field in crash report
3.4.3
	+ Fix MIME type for returning JSON (application/json)
	+ Added setMessage() and popMessageAndClass() methods to TreeView
	+ Enable InnoDB engine when there are only 4 previous databases
	+ Active session check does not check subapp authenticated
	  requests now
	+ Fixed incorrect URLs with double ports in redirects
3.4.2
	+ Fix typo in general widget
	+ Updated nginx to server static files directly always so apache shouldn't
	  ever get this kind of requests
	+ Support for redirection when loading URL in existent dialog
	+ Added webadmin port tag to haproxy configuration file
3.4.1
	+ Fix dashboard UI freeze when widgets were being updated
	+ Add audit to post save when enabling logs
	+ Fix enabled save changes button after installing packages
	+ Changed CGI base to show correctly referer errors and
	  generating response errors
	+ Override daemons does not fail if a daemon is already stopped
	+ Added missing use to row.mas
	+ More tolerant referer validation so we can access to submodels
	  with an URL
	+ Restored reconnect option for mysql connections
	+ EBox::WebAdmin::addNginxServer does not longer raises exception
	  if file not yet exists
	+ create-db script can repair login problems
	+ Migrate previous configuration from 3.3 when upgrading
	+ Admin password change handled by AuthPAM
	+ Fix version available check in dashboard when file does not exist
	+ Do not show success note if there is no note
	+ Fix data in use behaviour on edition
	+ Fixed revert of changes in redisvi
	+ Better input validation in EBox::Conf::Redis::import_dir_from_file
	+ Give support to data in use exception for in-place booleans