@@ -21,7 +21,6 @@ package EBox::SysInfo::CGI::CrashReport;
 use base qw(EBox::CGI::ClientBase);
 
 use EBox::Gettext;
-use EBox::GlobalImpl;
 use EBox::Validate;
 use EBox::Util::BugReport;
 use Error qw(:try);
@@ -37,13 +36,11 @@ sub _process
     # FIXME: unhardcode samba if more daemon crashes are watched
 
     if ($action eq 'report') {
-        my $cache = EBox::GlobalImpl::packageCache();
-        my $package = 'samba ' . $cache->{samba}->{CurrentVer}->{VerStr};
         my @files = @{EBox::Sudo::root("ls $CRASH_DIR | grep ^_usr_sbin_samba")};
         foreach my $file (@files) {
             chomp($file);
             EBox::info("Sending crash report: $file");
-            EBox::Sudo::root("/usr/share/zentyal/crash-report $CRASH_DIR/$file '$package'");
+            EBox::Sudo::root("/usr/share/zentyal/crash-report $CRASH_DIR/$file");
         }
         EBox::Sudo::root('rm -f /var/crash/_usr_sbin_samba*');
     } elsif ($action eq 'discard') {
