@@ -1,3 +1,5 @@
+HEAD
+	+ Included the Dependencies field in crash report
 3.4.4
 	+ Enhanced Lock to have exclusive lock with blocking timeout
 	+ Added redirection on no parameters support to CGIs
